Implementando envio de arquivos parciais